--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-
+ <main>
     <div class="words" contenteditable>
     </div>
+</main>
+
+
+
+
 
     <script type="text/javascript" src="script.js"></script>
 </body>
-
 </html>
