--- a/index.html
+++ b/index.html
@@ -9,10 +9,37 @@
 </head>
 
 <body>
- <main>
-    <div class="words" contenteditable>
-    </div>
-</main>
+    <main>
+        <!-- Speech to text -->
+
+        <div class="words" contenteditable>
+        </div>
+
+
+        <!-- Text to Speech -->
+
+        <div class="voiceinator">
+
+            <h1>Speak To Me</h1>
+
+            <select name="voice" id="voices">
+          <option value="">Select A Voice</option>
+        </select>
+
+            <label for="rate">Rate:</label>
+            <input name="rate" type="range" min="0" max="3" value="1" step="0.1">
+
+            <label for="pitch">Pitch:</label>
+
+            <input name="pitch" type="range" min="0" max="2" step="0.1">
+            <textarea name="text">Hello! I love JavaScript 👍</textarea>
+            <button id="stop">Stop!</button>
+            <button id="speak">Speak</button>
+
+        </div>
+
+
+    </main>
 
 
 
@@ -20,4 +47,5 @@
 
     <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
