Successfully added an API to insert random GIFs
Relates #3

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <body>
     <main>
         <!-- Speech to text -->
-
         <div class="words" contenteditable>
+            <!-- <button id="start">Start Typing</button>
+            <button id="end">End Typing</button> -->
         </div>
 
+        <!-- Inserting GIF -->
+       <div id="loader" class="loader"></div>
+       <img class="output-size" id="gif_image">
 
         <!-- Text to Speech -->
-
+        <form class="stack-md">
         <div class="voiceinator">
 
             <h1>Speak To Me</h1>
@@ -37,7 +41,7 @@
             <button id="speak">Speak</button>
 
         </div>
-
+    </form>
 
     </main>
 
